# diy-autodiff

./: .gitignore  README.rst  demo.py  pyproject.toml
diy_autodiff/: autodiff.py  models.py  training.py
tests/: test_diy_autodiff.py
